changed home page of app to login - app.octoblu.com

--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,12 @@
     <link href="assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/demo.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="assets/stylesheets/erosIntro.css" rel="stylesheet" media="screen">
+    <!-- <link href="assets/stylesheets/erosIntro.css" rel="stylesheet" media="screen"> -->
     <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen">
     <link href="assets/stylesheets/custom.css" rel="stylesheet">
     <link href="assets/stylesheets/animation.css" rel="stylesheet">
     <link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
-    <link href="assets/stylesheets/athenaSlide.css" rel="stylesheet">
+    <!-- <link href="assets/stylesheets/athenaSlide.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.css" type="text/css"/>
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" type="text/css"/>
