Work on elastic advanced searching

--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -1,3 +1,4 @@
+
 <section id='content'>
     <div class='container full-screen'>
         <!-- Made an Edit -->
@@ -38,7 +39,7 @@
             </div>
             <br/>
 
-                <div class="panel panel-info" ng-show="results" style="display:none;">
+                <div class="panel panel-info" ng-show="results" >
                     <!-- Default panel contents -->
                     <div class="panel-heading">Results
                       <p class="pull-right"> hits: {{ results.hits.total }}</p>
