--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <title>Octoblu - Internet of Everything!</title>
 
     <!-- SCROLLS -->
-    <link href="assets/stylesheets/bootstrap-switch/bootstrap-switch.css" media="all" rel="stylesheet" type="text/css" />
+    <!-- <link href="assets/stylesheets/bootstrap-switch/bootstrap-switch.css" media="all" rel="stylesheet" type="text/css" /> -->
     <link href="assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/demo.css" media="all" rel="stylesheet" type="text/css" />
@@ -215,8 +215,8 @@
 <script src="lib/elastic.js/dist/elastic.js"></script>
 <script src="lib/elasticsearch/elasticsearch.angular.js"></script>
 <script src="lib/smoothie/smoothie.js"></script>
-<script src="lib/jpreloader/js/jpreloader.js"></script>
-<script src="assets/javascripts/loop.js"></script>
+<!-- <script src="lib/jpreloader/js/jpreloader.js"></script> -->
+<!-- <script src="assets/javascripts/loop.js"></script> -->
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
