Fixing Dashboards via Elastic Service Advanced Search

--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -12,6 +12,27 @@
                     </h1>
                 </div>
 
+	<div class="container-fluid" ng-init="loadTop()">
+		 <div class="row">
+                <br/>
+                  <div class="col-md-4">
+                        <h2> Top Devices Sending</h2>
+                  </div>
+                  <div class="col-md-4">
+                        <h2> Top Devices Receiving</h2>
+                  </div>
+                  <div class="col-md-4">
+                        <h2> Top Payloads </h2>
+                  </div>
+              </div>
+              <div class="row">
+                 <div class="col-md-10">
+                <h2>Count of EventCodes over time</h2>
+                </div>
+                </div>
+            </div>
+	</div>
+<br/><br/><br/><br/>
             <div class="container-fluid">
               <div class="row">
                 <h2>Search Freeform Analytics</h2>
