Fixed the Connector Advanced Configure Hub page

--- a/public/pages/connector/advanced/gateways.html
+++ b/public/pages/connector/advanced/gateways.html
@@ -39,7 +39,7 @@
             <br/><br/>
         </div>
 
-        <div ng-hide="gateways.length">No Hubs found</div>
+        <!--<div ng-hide="gateways.length">No Hubs found</div>-->
         <div class="panel panel-primary" ng-repeat="gateway in gateways">
             <div class="panel-heading">
                 <h3 class="panel-title">
