--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -1,4 +1,3 @@
-
 <section id='content'>
     <div class='container full-screen'>
         <!-- Made an Edit -->
@@ -12,8 +11,11 @@
                     </h1>
                 </div>
 
-	<div class="container-fluid" ng-click="loadTop()">
-	 <div class="row">
+	<div class="container-fluid" >
+	<accordion>
+	<accordion-group heading="Top Graphs" is-open="$parent.step1open" ng-init="step1open = false"> 
+         <div class="container-fluid" >
+        <div class="row">
 		<div class="col-sm-4 dashboard-panel">
                         <div class="panel-heading">
                             <h3 class="panel-title">Top Devices Sending</h3>
@@ -49,17 +51,18 @@
                         </div>
                     </div>
                 </div>
+	</div><!-- Endof Container Fluid-->
+	</accordion-group>
+	<accordion-group heading="Time Ranges">
               <div class="row">
                  <div class="col-md-10">
                 <h2>Count of EventCodes over time</h2>
                 </div>
                 </div>
-            </div>
-	</div>
-<br/><br/><br/><br/>
+        </accordion-group>
+	<accordion-group heading="Freeform Search">	
             <div class="container-fluid">
               <div class="row">
-                <h2>Search Freeform Analytics</h2>
                 <div class="input-group">
                   <form class="form-inline col-md-12">
                     <div class="form-group col-md-8">
@@ -82,9 +85,8 @@
                 </div>
               </div>
             </div>
-            <br/>
-
-                <div class="panel panel-info" ng-show="results" >
+                
+	    <div class="panel panel-info" ng-show="results" >
                     <!-- Default panel contents -->
                     <div class="panel-heading">Results
                       <p class="pull-right"> hits: {{ results.hits.total }}</p>
@@ -98,9 +100,11 @@
                           </tr>
                       </table>
                     </div>
-                </div>
+            </div>
 
                 <!--<pager total-items="totalItems" page="currentPage" ng-show="results"></pager>-->
+	</accordion-group>
+	</accordion>
 
             </div>
         </div>
