Fixed the Connectors Channels not showing up correctly. Now the  available and active channels show up on the page.

--- a/public/index.html
+++ b/public/index.html
@@ -242,6 +242,7 @@
 <script src="angular/controllers/admin.js"></script>
 <script src="angular/controllers/analyzer.js"></script>
 <script src="angular/controllers/api.js"></script>
+<script src="angular/controllers/channel.js"></script>
 <script src="angular/controllers/connector.js"></script>
 <script src="angular/controllers/contact.js"></script>
 <script src="angular/controllers/controller.js"></script>
