--- a/public/pages/connector/advanced/devices.html
+++ b/public/pages/connector/advanced/devices.html
@@ -1,78 +1,73 @@
-<div>
-    <div class='row'>
-        <div class='col-sm-12 box'>
-            <div class='box-header'>
-                <div class='title pull-left'>
-                    <i class='icon-lightbulb'></i>
-                    Devices
-                </div>
-                <div class='pull-right'>
-                    <button ng-click="editingDevice = {}" class="btn btn-primary" ng-hide="editingDevice">
-                        <i class="icon-chevron-down"></i> Add Device
-                    </button>
-                    <button ng-click="editingDevice = false" class="btn btn-primary" ng-show="editingDevice">
-                        <i class="icon-chevron-up"></i> Cancel
-                    </button>
-
-                </div>
+<div class='row'>
+    <div class='col-sm-12 box'>
+        <div class='box-header'>
+            <div class='title pull-left'>
+                <i class='icon-lightbulb'></i>
+                Devices
             </div>
+            <!--<div class='pull-right'>-->
+            <!--<button ng-click="editingDevice = {}" class="btn btn-primary" ng-hide="editingDevice">-->
+            <!--<i class="icon-chevron-down"></i> Add Device-->
+            <!--</button>-->
+            <!--<button ng-click="editingDevice = false" class="btn btn-primary" ng-show="editingDevice">-->
+            <!--<i class="icon-chevron-up"></i> Cancel-->
+            <!--</button>-->
 
-            <div class="col-sm-12" ng-show="editingDevice">
-                <h3>Add/Edit Device</h3>
-                <!form name="myForm">
-                    <input class="form-control" name="deviceName" ng-model="device.name" placeholder="Device Name (required)" required>
-                    <br />
-
-                    <div ng-repeat="key in device" class="form-inline">
-                        <div class="form-group">
-                            <input class="form-control" ng-model="key.key" placeholder="Key">
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" ng-model="key.value" placeholder="Value">
-                        </div>
-                        <a href ng-click="removeKeyVals($index)"> <i class="icon-minus"></i></a>
-                        <a href ng-click="addKeyVals()"> <i class="icon-plus"></i></a>
-
-                    </div>
-
-                    <br />
-                    <button class="btn" ng-click="createDevice(device)">Submit</button>
-                    <br /><br />
-                <!/form>
-            </div>
-
-
-            <div ng-hide="devices.length">No devices found</div>
-            <div class="table-responsive">
-                <table class="table table-striped table-hover">
-                    <tr>
-                        <th>Name</th>
-                        <th>UUID</th>
-                        <th>Token</th>
-                        <th>Online</th>
-                        <th>Action</th>
-                    </tr>
-                    <tr ng-repeat="device in devices">
-
-                        <td>{{device.name}}</td>
-                        <td>{{device.uuid}}</td>
-                        <td>
-                            <a ng-click="moreInfo = true" ng-hide="moreInfo" href="">********************************</a>
-                            <input type="text" ng-show="moreInfo" value="{{device.token}}" size="40">
-
-                        </td>
-                        <td>{{device.online}}</td>
-                        <td>
-                            <!-- <a ng-click="moreInfo = true" ng-hide="moreInfo">more...</a> -->
-                            <!-- <a ng-click="moreInfo = false" ng-show="moreInfo">{{device}}</a> -->
-                            <button class="btn"ng-click="alert(device)" href="">Info</button>
-                            <button class="btn btn-inverse" ng-click="editingDevice = device">Edit</button>
-                            <button class="btn btn-danger" ng-click="deleteDevice(device)">Delete</button>
-                        </td>
-
-                    </tr>
-                </table>
-            </div>
+            <!--</div>-->
         </div>
+
+        <div class="col-sm-12" ng-show="editingDevice">
+            <h3>Add/Edit Device</h3>
+            <form name="myForm">
+            <input class="form-control" name="deviceName" ng-model="device.name" placeholder="Device Name (required)"
+                   required>
+            <br/>
+
+            <div ng-repeat="(key, value) in editingDevice" class="form-inline">
+                <div class="form-group">
+                    <label class="form-control-label">{{key}}</label>
+                </div>
+                <div class="form-group">
+                    <input class="form-control" ng-model="editingDevice[key]" placeholder="Value">
+                </div>
+                <a href ng-click="removeKeyVals(key)"> <i class="icon-minus"></i></a>
+                <a href ng-click="addKeyVals()"> <i class="icon-plus"></i></a>
+
+            </div>
+            <button class="btn" ng-click="saveDevice(editingDevice)">Submit</button>
+            <br/><br/>
+            </form>
+        </div>
+
+
+        <div ng-hide="devices.length">No devices found</div>
+        <table ng-show="devices.length" class="table table-striped table-hover">
+            <tr>
+                <th>Name</th>
+                <th>UUID</th>
+                <th>Token</th>
+                <th>Online</th>
+                <th>Action</th>
+            </tr>
+            <tr ng-repeat="device in devices">
+
+                <td>{{device.name}}</td>
+                <td>{{device.uuid}}</td>
+                <td>
+                    <a ng-click="moreInfo = true" ng-hide="moreInfo" href="">********************************</a>
+                    <input type="text" ng-show="moreInfo" value="{{device.token}}" size="40">
+
+                </td>
+                <td>{{device.online}}</td>
+                <td>
+                    <!-- <a ng-click="moreInfo = true" ng-hide="moreInfo">more...</a> -->
+                    <!-- <a ng-click="moreInfo = false" ng-show="moreInfo">{{device}}</a> -->
+                    <!--<button class="btn"ng-click="alert(device)" href="">Info</button>-->
+                    <button class="btn btn-inverse" ng-click="editDevice(device)">Edit</button>
+                    <button class="btn btn-danger" ng-click="deleteDevice(device)">Delete</button>
+                </td>
+
+            </tr>
+        </table>
     </div>
 </div>
