--- a/public/pages/connector/advanced/devices.html
+++ b/public/pages/connector/advanced/devices.html
@@ -1,9 +1,12 @@
 <div class='row'>
     <div class='col-sm-12 box'>
         <div class='box-header'>
-            <div class='title pull-left'>
-                <i class='icon-lightbulb'></i>
+            <div class="pull-left">
+                <i class="fa fa-hdd-o"></i>
                 Devices
+            </div>
+            <div class="pull-right" ng-hide="editingDevice">
+                <a class="btn btn-success btn-lg" ng-click="newDevice()"><i class="fa fa-save" style="margin-right: 5px"></i>Add</a>
             </div>
             <!--<div class='pull-right'>-->
             <!--<button ng-click="editingDevice = {}" class="btn btn-primary" ng-hide="editingDevice">-->
@@ -17,7 +20,8 @@
         </div>
 
         <div class="col-sm-12 col-md-6" ng-show="editingDevice">
-            <h3>Add/Edit Device</h3>
+            <h3 ng-hide="!editingDevice">Add/Edit Device</h3>
+
             <form  class="form-horizontal" role="form">
                 <div ng-repeat="(key, value) in editingDevice" class="form-group">
                     <label class="col-xs-4 control-label">{{key}}</label>
@@ -28,7 +32,7 @@
                         <a class="btn btn-sm btn-danger" href ng-click="removeProperty(key)"> <i class="fa fa-trash-o"> Delete</i></a>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" ng-hide="!editingDevice">
                     <div class="col-xs-6 col-xs-offset-4">
                         <input class="form-control" ng-model="newProperty" placeholder="Property Name">
                     </div>
@@ -36,9 +40,10 @@
                     <a class="btn btn-primary" ng-class="{disabled: !newProperty}" ng-click="addProperty()"><i class="fa fa-plus" style="margin-right: 5px"></i>Add</a>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" ng-hide="!editingDevice">
                     <div class="btn-group">
                         <a class="btn btn-success btn-lg" ng-click="saveDevice()"><i class="fa fa-save" style="margin-right: 5px"></i>Save</a>
+                        <a class="btn btn-default btn-lg" ng-click="editingDevice = undefined"><i class="fa fa-times" style="margin-right: 5px"></i>Cancel</a>
                     </div>
                 </div>
             </form>
@@ -59,8 +64,9 @@
                 <td>{{device.name}}</td>
                 <td>{{device.uuid}}</td>
                 <td>
-                    <a ng-click="moreInfo = true" ng-hide="moreInfo" href="">********************************</a>
-                    <input type="text" ng-show="moreInfo" value="{{device.token}}" size="40">
+                    <a ng-click="showToken = !showToken" href>
+                        {{ showToken ? device.token : '********************************'}}
+                    </a>
 
                 </td>
                 <td>{{device.online}}</td>
