--- a/public/pages/connector/advanced/devices.html
+++ b/public/pages/connector/advanced/devices.html
@@ -15,8 +15,8 @@
 
             <form  class="form-horizontal" role="form">
                 <div ng-repeat="(key, value) in editingDevice" class="form-group">
-                    <label class="col-xs-4 control-label">{{key}}</label>
-                    <div class="col-xs-6">
+                    <label class="col-xs-2 control-label">{{key}}</label>
+                    <div class="col-xs-8">
                         <input class="form-control" ng-model="editingDevice[key]">
                     </div>
                     <div class="col-xs-2">
@@ -24,15 +24,18 @@
                     </div>
                 </div>
                 <div class="form-group" ng-hide="!editingDevice">
-                    <div class="col-xs-6 col-xs-offset-4">
-                        <input class="form-control" ng-model="newProperty" placeholder="Property Name">
+                    <div class="col-xs-8 col-xs-offset-2">
+                        <div class="input-group">
+                            <input class="form-control" ng-model="newProperty" placeholder="Property Name">
+                         <span class="input-group-btn">
+                            <a class="btn btn-primary" ng-class="{disabled: !newProperty}" ng-click="addProperty()"><i class="fa fa-plus" style="margin-right: 5px"></i>Add</a>
+                        </span>
+                        </div>
                     </div>
-                    <div class="col-xs-2">
-                    <a class="btn btn-primary" ng-class="{disabled: !newProperty}" ng-click="addProperty()"><i class="fa fa-plus" style="margin-right: 5px"></i>Add</a>
-                    </div>
+
                 </div>
                 <div class="form-group" ng-hide="!editingDevice">
-                    <div class="btn-group">
+                    <div class="btn-group col-xs-4 col-xs-push-8">
                         <a class="btn btn-success btn-lg" ng-click="saveDevice()"><i class="fa fa-save" style="margin-right: 5px"></i>Save</a>
                         <a class="btn btn-default btn-lg" ng-click="editingDevice = undefined"><i class="fa fa-times" style="margin-right: 5px"></i>Cancel</a>
                     </div>
