--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -104,25 +104,32 @@
 
                 <!--<pager total-items="totalItems" page="currentPage" ng-show="results"></pager>-->
 	</accordion-group>
-	</accordion>
-
-            </div>
-        </div>
-           <div class="container-fluid">
+	<accordion-group heading="Device Details">
+	<div class="container-fluid">
               <div class="row">
                 <h2>Device Details</h2>
                 <div class="input-group">
                   <form class="form-inline col-md-12">
                   <div class="form-group col-md-12">
                   <div class="form-group">
-                    <select ng-model="device" ng-options="device.name for device in devices" class="form-control" ng-change="sensorListen(device)"></select> 
+                    <select ng-model="device" ng-options="device.name for device in devices" class="form-control" ng-change="sensorListen(device)"></select>
                   </div>
                   </div>
                   </form>
                 </div>
               </div>
             </div>
-	<textarea style="width:100%">{{device}}</textarea>
 
+                 <canvas id="mycanvas" width="400" height="100"></canvas>
+
+                 <div id="legend"></div>
+
+        <textarea style="width:100%">{{device}}</textarea>
+
+	</accordion-group>
+	</accordion>
+
+            </div>
+        </div>
     </div>
 </section>
