--- a/public/pages/connector/advanced/gateways/index.html
+++ b/public/pages/connector/advanced/gateways/index.html
@@ -1,10 +1,72 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div class="row">
+    <div class="col-sm-12 box">
+        <div class="box-header">
+            <div class="title pull-left">
+                <div class="fa fa-fw fa-stack fa-lg">
+                    <i class="fa fa-square fa-stack-2x"></i>
+                    <i class="fa fa-h-square fa-inverse fa-stack-1x"></i>
+                </div>
+                <div class="text-center">Hubs</div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12">
+        <div class="panel panel-primary" ng-repeat="hub in claimedHubs">
+            <div class="panel-heading">
+                {{hub.name }} - {{hub.uuid }}
+            </div>
+            <div class="panel-body">
+                <tabset>
+                    <tab heading="Subdevices" style="cursor:pointer;">
+                        <button class="btn btn-success pull-right" ng-click="addSubdevice(gateway)">Add</button>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover">
+                                <tr>
+                                    <th width="40%">Name</th>
+                                    <th width="40%">Plugin</th>
+                                    <th width="20%">Action</th>
+                                </tr>
+                                <tr ng-repeat="subdevice in hub.subdevices">
+                                    <td>{{subdevice.name}}</td>
+                                    <td>{{subdevice.type}}</td>
+                                    <td>
+                                        <button class="btn btn-inverse"
+                                                ng-click="openEditSubdevice(hub, subdevice)">Edit
+                                        </button>
+                                        <button class="btn btn-danger"
+                                                ng-click="deleteSubdevice(hub, subdevice)">Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </tab>
 
-</body>
-</html>
+                    <tab heading="Plugins" style="cursor:pointer;">
+                        <button class="btn btn-success pull-right" ng-click="openNewPlugin(hub)">Add</button>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover">
+                                <tr>
+                                    <th width="40%">Name</th>
+                                    <th width="40%">Version</th>
+                                    <th width="20%">Action</th>
+                                </tr>
+                                <tr ng-repeat="plugin in hub.plugins">
+                                    <td>{{plugin.name}}</td>
+                                    <td>{{plugin.version}}</td>
+                                    <td>
+                                        <button class="btn btn-danger" ng-click="deletePlugin(hub, plugin)">
+                                            Delete
+                                        </button>
+
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </tab>
+
+                </tabset>
+            </div>
+        </div>
+    </div>
+</div>
