Refactored device property editing into  a directive that can be reused  in pages where device property edits are needed.

--- a/public/pages/connector/advanced/devices.html
+++ b/public/pages/connector/advanced/devices.html
@@ -6,7 +6,7 @@
                 Devices
             </div>
             <div class="pull-right" ng-hide="editingDevice">
-                <a class="btn btn-success btn-lg" ng-click="newDevice()"><i class="fa fa-save" style="margin-right: 5px"></i>Add</a>
+                <a class="btn btn-success btn-lg" ng-click="newDevice()"><i class="fa fa-plus" style="margin-right: 5px"></i>Add</a>
             </div>
         </div>
 
