Added lodash removed underscore dependency, adding a modal to the page.

--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
-<script src="lib/underscore/underscore.js"></script>
+<script src="lib/lodash/dist/lodash.js"></script>
 <script src="lib/d3/d3.js"></script>
 <script src="lib/nvd3/nv.d3.js"></script>
 <!-- endbuild -->
