json schema editor directive first commit.

--- a/public/index.html
+++ b/public/index.html
@@ -238,6 +238,7 @@
 <script src="angular/directives/popover.js"></script>
 <script src="angular/directives/toggle.js"></script>
 <script src="angular/directives/device-property-editor/device-property-editor.js"></script>
+<script src="angular/directives/schema-editor/schema-editor.js"></script>
 <script src="angular/controllers/about.js"></script>
 <script src="angular/controllers/admin.js"></script>
 <script src="angular/controllers/analyzer.js"></script>
