--- a/public/pages/connector/devices/subdevice/add-edit.html
+++ b/public/pages/connector/devices/subdevice/add-edit.html
@@ -17,18 +17,9 @@
                 <input type="text" name="deviceName" disabled="disabled" ng-model="subdevice.name" placeholder="Name" class="form-control" required="required">
             </div>
         </div>
-        <div class="form-group" ng-repeat="deviceProperty in deviceProperties">
-            <div ng-if="deviceProperty.type == 'string'">
-                <input type="text" name="{{deviceProperty.name}}" ng-model="deviceProperty.value" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="{{deviceProperty.required}}">
-            </div>
-            <div ng-if="deviceProperty.type == 'number'">
-                <input type="number" name="{{deviceProperty.name}}" ng-model="deviceProperty.value" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="{{deviceProperty.required}}">
-            </div>
-            <div ng-if="deviceProperty.type == 'boolean'">
-                <input type="checkbox" name="{{deviceProperty.name}}" ng-model="deviceProperty.value" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="{{deviceProperty.required}}">
-            </div>
-        </div>
     </form>
+    <schema-editor schema="plugin.optionsSchema" model="subdevice.options"></schema-editor>
+    <pre>{{subdevice.options | json}}</pre>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancel()">Close</button>
