--- a/public/pages/connector/advanced/gateways/index.html
+++ b/public/pages/connector/advanced/gateways/index.html
@@ -22,7 +22,7 @@
                             <select ng-model="selectedDeviceType"
                                     ng-options="deviceType.name for deviceType in availableDeviceTypes | filter: {enabled : true}">
                             </select>
-                            <a href class="btn btn-success" ng-class="{disabled : ! selectedDeviceType }" ng-click="addSubdevice(hub, selectedDeviceType)"><i class="fa fa-plus"></i>Add</a>
+                            <a href class="btn btn-success" ng-class="{disabled : ! selectedDeviceType }" ng-click="editSubdevice(hub, selectedDeviceType.plugin)"><i class="fa fa-plus"></i>Add</a>
                         </div>
                         <div class="table-responsive">
                             <table class="table table-striped table-hover">
@@ -36,7 +36,7 @@
                                     <td>{{subdevice.type}}</td>
                                     <td>
                                         <button class="btn btn-inverse"
-                                                ng-click="editSubdevice(hub, subdevice)">Edit
+                                                ng-click="editSubdevice(hub, subdevice.type, subdevice)">Edit
                                         </button>
                                         <button class="btn btn-danger"
                                                 ng-click="deleteSubdevice(hub, subdevice)">Delete
@@ -48,7 +48,6 @@
                     </tab>
 
                     <tab heading="Plugins" style="cursor:pointer;">
-                        <button class="btn btn-success pull-right" ng-click="addPlugin(hub)">Add</button>
                         <div class="table-responsive">
                             <table class="table table-striped table-hover">
                                 <tr>
