--- a/public/pages/devtools.html
+++ b/public/pages/devtools.html
@@ -38,7 +38,7 @@
   </div>
 </div>
 
-<button class="btn btn-success pull-right" ng-click="openNewApi()">Add</button>
+<a href ui-sref="connector.advanced.channels.editor({name: 'new'})" class="btn btn-success pull-right" >Add</a>
 
  <div class="divScroll">
  	<div class="scrollWrapper">
