Channels editor is semi-working. Needs some work done.

--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
-       <div ng-if="devices.length != 0" class="panel panel-primary">
+       <div ng-if="hasHubs" class="panel panel-primary">
            <div class="panel-heading">
                <h4 class="text-center">
                    <i class="fa fa-plus fa-lg"></i>
