--- a/public/pages/connector/devices/subdevice/add-edit.html
+++ b/public/pages/connector/devices/subdevice/add-edit.html
@@ -1,7 +1,10 @@
 <div class="modal-header" >
     <img ng-src="{{getSubDeviceLogo(subdevice)}}" class="img-rounded pull-left" height="48px" width="48px">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancel()">&times;</button>
-    <h3 class="modal-title text-center" style="padding-bottom: 1em;" id="myModalLabel">{{hub.name}} - Add / Edit Subdevice</h3>
+    <h3 class="modal-title text-center" style="padding-bottom: 1em;" id="myModalLabel">
+        <select ng-model="hub" ng-options="hub.name for hub in hubs"></select>
+    </h3>
+
 </div>
 <div class="modal-body">
     <form class="form-horizontal" role="form">
