--- a/public/pages/connector/advanced/messaging.html
+++ b/public/pages/connector/advanced/messaging.html
@@ -3,13 +3,13 @@
 
         <div class="form-inline">
             FROM: <br /><br />
-            <select ng-model="fromDevice" ng-options="device.name for device in devices" class="form-control" id="fromDevice"></select>
+            <select ng-model="fromDevice" ng-options="device.name for device in devices | orderBy:'name'" class="form-control" id="fromDevice"></select>
             <br /><br />
 
             TO:<br /><br />
             <div class="form-group">
                 <!-- <select ng-model="device" ng-options="device.name for device in devices" class="form-control"></select> -->
-                <select ng-model="device" ng-options="device.name for device in devices" class="form-control" id="device" ng-change="getSubdevices(device)"></select>
+                <select ng-model="device" ng-options="device.name for device in devices | orderBy:'name'" class="form-control" id="device"></select>
 
             </div>
             <div class="form-group"> OR </div>
@@ -20,7 +20,7 @@
 
             <div ng-hide="!device.subdevices">
                 Select a Gateway Subdevice:<br /><br />
-                <select ng-model="subdevice" ng-options="subdevice.name for subdevice in device.subdevices" class="form-control" id="subdevice"></select>
+                <select ng-model="subdevice" ng-options="subdevice.name for subdevice in device.subdevices | orderBy:'name'" class="form-control" id="subdevice"></select>
                 <br /><br />
             </div>
 
