finished findhub wizard stuff

--- a/public/index.html
+++ b/public/index.html
@@ -247,6 +247,8 @@
 <script src="angular/controllers/connector.js"></script>
 <script src="angular/controllers/contact.js"></script>
 <script src="angular/controllers/controller.js"></script>
+<script src="angular/controllers/device-wizard.js"></script>
+<script src="angular/controllers/device-edit.js"></script>
 <script src="angular/controllers/device.js"></script>
 <script src="angular/controllers/subdevice.js"></script>
 <script src="angular/controllers/dashboard.js"></script>
