--- a/public/index.html
+++ b/public/index.html
@@ -233,6 +233,7 @@
 <script src="angular/services/invitation.js"></script>
 <script src="angular/services/permissions.js"></script>
 <script src="angular/services/skynet.js"></script>
+<script src="angular/services/auth.js"></script>
 <script src="angular/directives/nvd3-line-chart.js"></script>
 <script src="angular/directives/nvd3-pie-chart.js"></script>
 <script src="angular/directives/popover.js"></script>
