--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -18,16 +18,16 @@
             <div class='row'>
               <div class='col-sm-4 col-sm-offset-4'>
                 <h1 class='text-center title'>Sign in</h1>
-                <form action="/login" method="post" class='validate-form' target="_self">
+                <form class='validate-form' target="_self">
                   <div class='form-group'>
                     <div class='controls with-icon-over-input'>
-                      <input value="" placeholder="E-mail" class="form-control" data-rule-required="true" name="email" type="text" />
+                      <input value="" ng-model="email" placeholder="E-mail" class="form-control" data-rule-required="true" name="email" type="text" />
                       <i class='icon-user text-muted'></i>
                     </div>
                   </div>
                   <div class='form-group'>
                     <div class='controls with-icon-over-input'>
-                      <input value="" placeholder="Password" class="form-control" data-rule-required="true" name="password" type="password" />
+                      <input value="" placeholder="Password" ng-model="password" class="form-control" data-rule-required="true" name="password" type="password" />
                       <i class='icon-lock text-muted'></i>
                     </div>
                   </div>
@@ -37,7 +37,7 @@
                       Remember me
                     </label>
                   </div>
-                  <button class='btn btn-block'>Sign in</button>
+                  <a href ng-click="login()" class='btn btn-block'>Sign in</a>
                 </form>
                 <div class='text-center'>
                   <hr class='hr-normal'>
@@ -68,14 +68,7 @@
           <div class='container '>
             <div class='row'>
               <div class='col-sm-12'>
-<!--                 <div class='text-center'>
-                  <a href='#signup'>
-                    <i class='icon-user'></i>
-                    New to E2E?
-                    <strong>Sign up</strong>
-                  </a>
-                </div>
- -->              </div>
+            </div>
             </div>
           </div>
         </div>
