--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 <body class="contrast-sea-blue" ng-app="octobluApp">
 
 
-<header ng-show="authorization.isAuthenticated">
+<header>
     <nav class="navbar navbar-default navbar-fixed-top">
         <a class="navbar-brand" href="" ui-sref="home">
             <img src="/assets/images/octoblu.png" height="50px"/>
@@ -104,7 +104,7 @@
 </header>
 
 <!-- Left Nav Menu -->
-<div id="main" ng-show="authorization.isAuthenticated">
+<div id="main">
     <div id="main-nav-bg"></div>
     <nav id="main-nav">
         <div class="navigation">
