--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
                     </li>
                     <li class="divider"></li>
                     <li>
-                        <a href="/logout" target="_self">
+                        <a href ng-click="logout()" target="_self">
                             <i class="icon-signout"></i>
                             Sign out
                         </a>
